nested property watching

--- a/example/components/x-counter.html
+++ b/example/components/x-counter.html
@@ -1,21 +1,28 @@
 <template>
-  <button @click="increment" x-text="count"></button>
+  <button @click="increment" x-text="data.count"></button>
+  <div x-if="odd" x-text="odd"></div>
+  <div x-show="!odd" x-ref="even">EVEN</div>
+  <div x-for="t in things">
+    <div>NAME: <span x-text="t.name"></span></div>
+  </div>
 </template>
 
 <script>
 export default class {
-  increment() {
-    console.log("INCREMENT")
-    this.count++
-    this.render()
+  get odd() {
+    return Boolean(this.count % 2)
   }
-  created() {
-    this.count = 0
-    console.log("CREATED")
-    window.x = this
+  get things() {
+    return [ { name: 'abc' }, { name: 'def' }, { name: 'ghi' } ]
+  }
+  increment() {
+    this.data.count++
   }
   mounted() {
-    console.log("MOUNTED")
+    console.log("MOUNTED", this.prop);
+  }
+  created() {
+    this.data = { count: 0 }
   }
 }
 </script>
