--- a/example/components/x-list-item.html
+++ b/example/components/x-list-item.html
@@ -25,7 +25,7 @@ export default class {
   get status() {
     return this.item.done ? 'completed' : 'active'
   }
-  init() {
+  initialize() {
     this.editing = false
     document.addEventListener('click', this.cancel)
   }
