--- a/example/views/x-app-view.html
+++ b/example/views/x-app-view.html
@@ -34,6 +34,13 @@
 import { store } from '../store.js'
 
 export default class {
+  initialize() {
+    this.clearCount = 0
+  }
+  created() {
+    this.$watch(this.filter, () => console.log("FILTERCHANGE"))
+    this.$watch(this.clearCount, () => console.log("COUNTCHANGE"))
+  }
   addItem(e) {
     e.preventDefault()
     store.addItem(this.$refs.input.value)
@@ -57,6 +64,8 @@ export default class {
   }
   clearCompleted() {
     store.clearCompleted()
+    this.clearCount++
+    this.$emit('clearcountchange')
   }
 }
 </script>
