--- a/example/components/x-counter.html
+++ b/example/components/x-counter.html
@@ -5,6 +5,9 @@
 
 <script>
 export default class {
+  static get props() {
+    return ['item']
+  }
   initialize() {
     this.data = { count: 0 }
   }
