--- a/tests/components/x-echo.html
+++ b/tests/components/x-echo.html
@@ -1,5 +1,6 @@
 <template>
   <h1 x-text="message"></h1>
+  <span x-if="this.hasAttribute('bogus')" x-text="this.bogus || 'fallback'"></span>
 </template>
 
 <script>
