--- a/tests/views/props.html
+++ b/tests/views/props.html
@@ -8,7 +8,7 @@
   <hr>
   <x-echo :class="`large`" message="large"></x-echo>
   <hr>
-  <x-echo message="bogus" bogus="0"></x-echo>
+  <x-echo message="bogus" bogus="invalid"></x-echo>
   <hr>
   <x-echo message="data-attribute" data-delay="0"></x-echo>
   <hr>
