--- a/ssr/example/views/todo-list.html
+++ b/ssr/example/views/todo-list.html
@@ -1,18 +1,20 @@
 <template>
-  <div class="todo-list">
-    <h1 x-text="title"></h1>
-    <p x-text="`You have ${todos.length} todos`"></p>
-    
-    <ul class="todos" x-if="todos.length > 0">
-      <template x-for="todo in todos">
-        <x-todo-item :todo="todo"></x-todo-item>
-      </template>
-    </ul>
-    
-    <p x-if="todos.length === 0" class="empty">
-      No todos yet! Add some tasks to get started.
-    </p>
-  </div>
+  <x-layout>
+    <div class="todo-list">
+      <h1 x-text="title"></h1>
+      <p x-text="`You have ${todos.length} todos`"></p>
+
+      <ul class="todos" x-if="todos.length > 0">
+        <template x-for="todo in todos">
+          <x-todo-item :todo="todo"></x-todo-item>
+        </template>
+      </ul>
+
+      <p x-if="todos.length === 0" class="empty">
+        No todos yet! Add some tasks to get started.
+      </p>
+    </div>
+  </x-layout>
 </template>
 
 <style>
@@ -42,7 +44,7 @@
 </style>
 
 <script>
-export default class TodoList {
+export default class {
   initialize() {
     console.log("SSR INIT")
   }
