fix up ssr layouts and add tests

--- a/ssr/example/components/x-layout.html
+++ b/ssr/example/components/x-layout.html
@@ -30,6 +30,7 @@
           background: white;
         }
       </style>
+      <slot name="head"></slot>
     </head>
     <body>
       <header class="layout-header">
@@ -49,6 +50,7 @@
           <p>Powered by Peak.js SSR</p>
         </div>
       </footer>
+      <slot name="foot"></slot>
     </body>
   </html>
 </template>
