--- a/documentation/docs/.vitepress/theme/custom.css
+++ b/documentation/docs/.vitepress/theme/custom.css
@@ -48,6 +48,9 @@ img[src="code-hero.svg"] {
   & > .container {
     align-items: center;
   }
+  .actions {
+    margin-bottom: 24px;
+  }
 }
 
 @media (min-width: 960px) {
